# coop

./: .gitignore  config.yaml.example  index.html  pyproject.toml
.github/workflows/: coop-check.yml
src/coop_delivery/: html_export.py  main.py  models.py  scraper.py
